--- a/index.html
+++ b/index.html
@@ -1,84 +1,25 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emergencias del Vecindario</title>1
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <title>API Test</title>
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Emergencias del Vecindario</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">Acerca de</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <h1>API Status Test</h1>
+    <button id="fetchStatus">Fetch Status</button>
+    <div id="statusResult"></div>
 
-    <!-- Page Content -->
-    <div class="container mt-5">
-        <h1 class="mb-4">Emergencias recientes</h1>
-        <!-- Emergency Posts -->
-        <div class="card mb-3">
-            <div class="card-body">
-                <h5 class="card-title">Emergency Title</h5>
-                <p class="card-text">Brief description of the emergency.</p>
-                <p class="card-text"><small class="text-muted">Posted on Date Time</small></p>
-                <a href="post.html" class="btn btn-primary">Read More</a>
-            </div>
-        </div>
-        <!-- Add New Emergency Form -->
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Report a New Emergency</h5>
-                <form id="newEmergencyForm">
-                    <div class="form-group">
-                        <label for="title">Title</label>
-                        <input type="text" class="form-control" id="title" name="title" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="description">Description</label>
-                        <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="location">Location</label>
-                        <input type="text" class="form-control" id="location" name="location" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="urgency">Urgency Level</label>
-                        <select class="form-control" id="urgency" name="urgency" required>
-                            <option value="low">Low</option>
-                            <option value="medium">Medium</option>
-                            <option value="high">High</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-        </div>
-    </div>
+    <script>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JavaScript -->
-    <script src="js/script.js"></script>
+        const apiBaseUrl = 'https://20dotpyrgj.execute-api.us-east-1.amazonaws.com/production';
+
+        document.getElementById('fetchStatus').addEventListener('click', async () => {
+            const response = await fetch(`${apiBaseUrl}/status`);
+            const result = await response.json();
+            document.getElementById('statusResult').innerText = result.message;
+        });
+
+    </script>
 </body>
 </html>
