--- a/dashboard.html
+++ b/dashboard.html
@@ -35,10 +35,10 @@
                     </div>
                     <div class="card-body">
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><a href="#" onclick="filterNotices('Robo')">Robo</a></li>
-                            <li class="list-group-item"><a href="#" onclick="filterNotices('Asalto')">Asalto</a></li>
-                            <li class="list-group-item"><a href="#" onclick="filterNotices('Casa sola')">Casa sola</a></li>
-                            <li class="list-group-item"><a href="#" onclick="filterNotices('Festividades')">Festividades</a></li>
+                            <li class="list-group-item"><a href="#" onclick="filterNotices(1)">Robo</a></li>
+                            <li class="list-group-item"><a href="#" onclick="filterNotices(2)">Asalto</a></li>
+                            <li class="list-group-item"><a href="#" onclick="filterNotices(3)">Casa sola</a></li>
+                            <li class="list-group-item"><a href="#" onclick="filterNotices(4)">Festividades</a></li>
                         </ul>
                     </div>
                 </div>
