cambio de color y algo de diseño en sign-in

--- a/sign-in.html
+++ b/sign-in.html
@@ -9,19 +9,18 @@
     <!-- FontAwesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/sign-in.css">
 </head>
 <body>
     <header class="bg-primary py-3">
-        <div class="container">
-            <h1 class="text-white">Sign In</h1>
+        <div class="container text-center">
         </div>
     </header>
     <main class="container mt-4">
         <section class="row justify-content-center">
             <div class="col-md-6">
-                <div class="card">
-                    <div class="card-header">
+                <div class="card shadow-lg">
+                    <div class="card-header bg-primary text-white text-center">
                         <h2>Iniciar Sesión</h2>
                     </div>
                     <div class="card-body">
