agregacion de obtencion de comentarios en cada post a api y acutalizacion de dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
     <!-- FontAwesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="bg-primary py-3">
@@ -35,10 +35,10 @@
                     </div>
                     <div class="card-body">
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><a href="#" onclick="filterNotices(1)">Robo</a></li>
-                            <li class="list-group-item"><a href="#" onclick="filterNotices(2)">Asalto</a></li>
-                            <li class="list-group-item"><a href="#" onclick="filterNotices(3)">Casa sola</a></li>
-                            <li class="list-group-item"><a href="#" onclick="filterNotices(4)">Festividades</a></li>
+                            <li class="list-group-item"><a href="#" onclick="filterNotices('Robo')">Robo</a></li>
+                            <li class="list-group-item"><a href="#" onclick="filterNotices('Asalto')">Asalto</a></li>
+                            <li class="list-group-item"><a href="#" onclick="filterNotices('Casa sola')">Casa sola</a></li>
+                            <li class="list-group-item"><a href="#" onclick="filterNotices('Festividades')">Festividades</a></li>
                         </ul>
                     </div>
                 </div>
