implementacion de creacion de post en la api y pagina web

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="container">
                 <h2>Bienvenido a tu junta de vecinos</h2>
                 <p>Nuestra plataforma facilita la comunicación y colaboración entre los miembros de la comunidad. Aquí podrás encontrar avisos importantes, agregar tus propios avisos y participar en las actividades de tu vecindario.</p>
-                <a href="#" class="btn">Iniciar sesion</a>
+                <a href="sign-in.html" class="btn">Iniciar sesion</a>
             </div>
         </section>
         <section class="services">
