cambio de diseño en nuevo aviso

--- a/nuevo-aviso.html
+++ b/nuevo-aviso.html
@@ -9,24 +9,23 @@
     <!-- FontAwesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/nuevo-aviso.css">
 </head>
 <body>
     <header class="bg-primary py-3">
         <div class="container">
             <h1 class="text-white">Nuevo Aviso</h1>
         </div>
-        <!-- Button to go back to index and eliminate local storage info in the right -->
         <a href="index.html" class="btn btn-light text-primary position-absolute" style="top: 1rem; right: 1rem;">
             <i class="fas fa-arrow-left"></i> Volver
         </a>
     </header>
     <main class="container mt-4">
         <section class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h2>Crear Nuevo Aviso</h2>
+            <div class="col-md-8">
+                <div class="card shadow custom-card">
+                    <div class="card-header bg-custom-header">
+                        <h2 class="mb-0 text-white">Crear Nuevo Aviso</h2>
                     </div>
                     <div class="card-body">
                         <form id="create-post-form">
