--- a/index.html
+++ b/index.html
@@ -13,15 +13,6 @@
             <div class="logo">
                 <h1>Junta de vecinos</h1>
             </div>
-            <!-- <nav>
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Planes y Precios</a></li>
-                    <li><a href="#">Quiénes Somos</a></li>
-                    <li><a href="#">Contacto</a></li>
-                </ul>
-            </nav> -->
         </div>
     </header>
     <main>
@@ -29,12 +20,12 @@
             <div class="container">
                 <h2>Bienvenido a tu junta de vecinos</h2>
                 <p>Nuestra plataforma facilita la comunicación y colaboración entre los miembros de la comunidad. Aquí podrás encontrar avisos importantes, agregar tus propios avisos y participar en las actividades de tu vecindario.</p>
-                <a href="sign-in.html" class="btn">Iniciar sesion</a>
+                <a href="sign-in.html" class="btn">Iniciar sesión</a>
             </div>
         </section>
         <section class="services">
             <div class="container">
-                <h2>¿Que ofrecemos?</h2>
+                <h2>¿Qué ofrecemos?</h2>
                 <p>Potencie su organización con soluciones eficaces de gestión de datos</p>
                 <div class="service-list">
                     <div class="service-item">
@@ -43,8 +34,10 @@
                     </div>
                     <div class="service-item">
                         <h3>Funciones</h3>
-                        <li>Agregar y editar avisos</li>
-                        <li>Filtrar avisos por categorías</li>
+                        <ul>
+                            <li>Agregar y editar avisos</li>
+                            <li>Filtrar avisos por categorías</li>
+                        </ul>
                     </div>
                     <div class="service-item">
                         <h3>Precio</h3>
@@ -73,7 +66,19 @@
             <div class="container">
                 <h2>Nuestro equipo</h2>
                 <p>Conozca a los profesionales que están detrás de nuestro producto</p>
-                <a href="#" class="btn">Más información</a>
+                <div class="team-cards">
+                    <div class="team-card">
+                        <img src="images/helviansog.jpg" alt="Nombre del equipo 1">
+                        <h3>Benjamin Gajardo Soto</h3>
+                        <p>Helvians</p>
+                    </div>
+                    <div class="team-card">
+                        <img src="images/fitdran.jpg" alt="Nombre del equipo 2">
+                        <h3>Adolfo Luna Gatica</h3>
+                        <p>Fitdran</p>
+                    </div>
+                    <!-- Puedes añadir más tarjetas para otros miembros del equipo -->
+                </div>
             </div>
         </section>
         <section class="testimonials">
@@ -87,7 +92,6 @@
                         <p>La comunicación transparente de Fitdran ha mejorado nuestra eficiencia.</p>
                     </div>
                 </div>
-                <a href="#" class="btn">Seguir leyendo</a>
             </div>
         </section>
         <section class="contact">
