agregando imaganes de los integrantes

--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
                         <h3>Adolfo Luna Gatica</h3>
                         <p>Fitdran</p>
                     </div>
+                    <div class="team-card">
+                        <img src="images/javiervidal.jpg" alt="Nombre del equipo 3">
+                        <h3>Javier Vidal</h3>
+                        <p>Kayn Bécil</p>
+                    </div>
+                    <div class="team-card">
+                        <img src="images/CristobalFritz.png" alt="Nombre del equipo 3">
+                        <h3>Cristobal Fritz</h3>
+                        <p>CriFric</p>
+                    </div>
                     <!-- Puedes añadir más tarjetas para otros miembros del equipo -->
                 </div>
             </div>
