cambio de imagen javier2

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="service-item">
                         <h3>Precio</h3>
-                        <p>Nuestra plataforma es completamente gratuita para todos los miembros de la comunidad.</p>
+                        <p>Nuestra plataforma es completamente gratuita para todos los miembros de la comunidad en el plan estándar.</p>
                     </div>
                 </div>
             </div>
@@ -78,13 +78,13 @@
                         <p>Fitdran</p>
                     </div>
                     <div class="team-card">
-                        <img src="images/javiervidal.jpg" alt="Nombre del equipo 3">
-                        <h3>Javier Vidal</h3>
+                        <img src="images/javer2.jpg" alt="Nombre del equipo 3">
+                        <h3>Javier Vidal Jimenez</h3>
                         <p>Kayn Bécil</p>
                     </div>
                     <div class="team-card">
                         <img src="images/CristobalFritz.png" alt="Nombre del equipo 3">
-                        <h3>Cristobal Fritz</h3>
+                        <h3>Cristobal Fritz Camus</h3>
                         <p>CriFric</p>
                     </div>
                     <!-- Puedes añadir más tarjetas para otros miembros del equipo -->
