cambiar imagenes de local a uso the uploadthing

--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
                 <p>Conozca a los profesionales que están detrás de nuestro producto</p>
                 <div class="team-cards">
                     <div class="team-card">
-                        <img src="images/helviansog.jpg" alt="Nombre del equipo 1">
+                        <img src="ttps://uploadthing-prod-sea1.s3.us-west-2.amazonaws.com/5ab98b8d-090e-4329-8d25-7d6122b99c82-noc70k.jpg" alt="Nombre del equipo 1">
                         <h3>Benjamin Gajardo Soto</h3>
                         <p>Helvians</p>
                     </div>
                     <div class="team-card">
-                        <img src="images/fitdran.jpg" alt="Nombre del equipo 2">
+                        <img src="https://uploadthing-prod-sea1.s3.us-west-2.amazonaws.com/fd1e45dd-3652-41c5-93bd-acdebff4dcfd-e0nius.jpg" alt="Nombre del equipo 2">
                         <h3>Adolfo Luna Gatica</h3>
                         <p>Fitdran</p>
                     </div>
                     <div class="team-card">
-                        <img src="images/javer2.jpg" alt="Nombre del equipo 3">
+                        <img src="https://uploadthing-prod-sea1.s3.us-west-2.amazonaws.com/97ca0fe0-3905-47da-a8d3-95c0769afb7c-jaukii.jpg" alt="Nombre del equipo 3">
                         <h3>Javier Vidal Jimenez</h3>
                         <p>Kayn Bécil</p>
                     </div>
                     <div class="team-card">
-                        <img src="images/CristobalFritz.png" alt="Nombre del equipo 3">
+                        <img src="https://uploadthing-prod-sea1.s3.us-west-2.amazonaws.com/f9484acc-5712-4997-9b35-3df66dfcc369-7kchva.png" alt="Nombre del equipo 3">
                         <h3>Cristobal Fritz Camus</h3>
                         <p>CriFric</p>
                     </div>
