--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p>Conozca a los profesionales que están detrás de nuestro producto</p>
                 <div class="team-cards">
                     <div class="team-card">
-                        <img src="ttps://uploadthing-prod-sea1.s3.us-west-2.amazonaws.com/5ab98b8d-090e-4329-8d25-7d6122b99c82-noc70k.jpg" alt="Nombre del equipo 1">
+                        <img src="https://uploadthing-prod-sea1.s3.us-west-2.amazonaws.com/5ab98b8d-090e-4329-8d25-7d6122b99c82-noc70k.jpg" alt="Nombre del equipo 1">
                         <h3>Benjamin Gajardo Soto</h3>
                         <p>Helvians</p>
                     </div>
