--- a/nuevo-aviso.html
+++ b/nuevo-aviso.html
@@ -16,7 +16,7 @@
         <div class="container">
             <h1 class="text-white">Nuevo Aviso</h1>
         </div>
-        <a href="index.html" class="btn btn-light text-primary position-absolute" style="top: 1rem; right: 1rem;">
+        <a href="dashboard.html" class="btn btn-light text-primary position-absolute" style="top: 1rem; right: 1rem;">
             <i class="fas fa-arrow-left"></i> Volver
         </a>
     </header>
