--- a/sign-up.html
+++ b/sign-up.html
@@ -52,6 +52,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/sign-up.js"></script>
+    <script src="js/sign-in.js"></script>
 </body>
 </html>
